--- a/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
+++ b/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
@@ -60,8 +60,10 @@
     <!-- Mensaje de error -->
     <p *ngIf="mensajeError" class="text-danger">{{ mensajeError }}</p>
 
+
+
     <!-- Botón para volver a la lista de usuarios -->
-    <button class="btn btn-secondary mt-3 w-100" (click)="irAUsuarios()">
+    <a routerLink="/usuario" class="btn btn-secondary mt-3 w-100">
       Volver a Lista de Usuarios
-    </button>
+    </a>
 </div>
